[package]
name = "linkbuilder"
version = "0.1.0"
edition = "2021"
description = "Program for managing files on the COGP website, and building links to these files on GIS layers."

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "linkbuilder"

[dependencies]
dotenv = "0.15.0"
error-chain = "0.12.4"
reqwest = { version = "0.11.17", features = ["json"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
