[package]
name = "linkbuilder"
version = "0.1.0"
edition = "2021"
description = "Program for managing files on the COGP website, and building links to these files on GIS layers."

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "linkbuilder"

[dependencies]
byte-unit = { version = "4.0.19", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
data-encoding = "2.4.0"
dotenv = "0.15.0"
indicatif = "0.17.7"
itertools = "0.11.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
